--- a/app/src/main/res/layout/calc_layout.xml
+++ b/app/src/main/res/layout/calc_layout.xml
@@ -152,7 +152,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"/>
         <Button
-            android:id="@+id/equal"
+            android:id="@+id/equals"
             android:text="="
             android:textSize="25sp"
             android:layout_width="0dp"
